--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -161,6 +161,14 @@
   .lr-text {
     font-size: 18px;
     font-weight: 700;
+    &:after {
+      content: "";
+      width: 15px;
+      height: 10px;
+      display: inline-block;
+      background: url(../images/icons/buy-2.png) no-repeat center center;
+      margin-left: 5px;
+    }
   }
   .icon {
     width: 15px;
@@ -193,6 +201,7 @@
   .lr-text {
     width: 50px;
     margin-left: 36px;
+    line-height: 15px;
     text-align: left;
     display: inline-block;
   }
