--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -98,6 +98,11 @@
               </div>
             </div>  <!--./stage-wrap-->
 
+            <!--product-info on mobile-->
+            <div class="product-info-mobile">
+            </div>
+            <!--product-info-mobile-->
+
             <!--product-detail-->
             <div class="product-detail">
               <div class="tab-content">
