--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -7,6 +7,12 @@
 		margin-bottom: 0;
 	}
   @media (max-width: @screen-md-max) {
+    height: 60px;
+    .navbar {
+      height: 60px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
     .open {
       .dropdown-menu {
         position: absolute;
@@ -42,6 +48,14 @@
 			width: 100%;
 		}
 	}
+  @media (max-width: @screen-md-max) {
+    width: 100px;
+    a {
+      display: block;
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  }
 }
 .search-nav {
 	width: 66%;
