--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -205,3 +205,8 @@ img {
     }
   }
 }
+.fb_iframe_widget,
+.fb_iframe_widget span,
+.fb_iframe_widget span iframe[style] {
+  width: 100% !important;
+}
