--- a/myface-onface-html/src/views/block/_shopper-menu.html
+++ b/myface-onface-html/src/views/block/_shopper-menu.html
@@ -43,7 +43,24 @@
 		      	<label><span class="icon i-pin"></span> 789 <span class="tab-span">ghim</span></label>
 		      </li>
 		      <li class="tab-item tab-single">
-		      	<a class="shop-about" href="#">Giới thiệu shop</a>
+		      	<a class="dropdown-toggle shop-about" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Giới thiệu shop</a>
+            <div class="dropdown-menu shop-about-dropdown">
+              <!--shop-info-box-->
+              <div class="alert">
+                <label>Thông tin Shop bán hàng</label>
+                <p>
+                  <a class="shop-name" href="#">Gucci</a>
+                </p>
+                <p><span class="lb">Địa chỉ:</span> Tầng B1, Vincom Mega Mall Thảo Điền, 159-161 Xa Lộ Hà Nội, Phường Thảo Điền, Quận 2, Thành Phố Hồ Chí Minh.</p>
+                <p class="contact-info-row">
+                  <span class="lb">Email:</span> <a href="mailto:Guccihanghieu@gmail.com">Guccihanghieu@gmail.com </a>
+                </p>
+                <p class="contact-info-row">
+                  <span class="lb">Phone:</span> <a href="tel:1900636798">02455254523</a>
+                </p>
+                <p>Thực Phẩm: Sữa bột cho bé, Sữa Optimum Gold, Thực phẩm chay, Thực phẩm bổ dưỡng, Thực phẩm ăn liền, Thực phẩm tươi, Bột ăn dặm ridielac, Bia Heineken​, Bia Budweiser, Bia Tiger, Kẹo alpenliebe, Bia 333 thùng...<a class="more-product" href="#">Xem thêm</a></p>
+              </div>
+            </div>
 		      </li>
 		    </ul>
 		 	</nav><!--/.tabs-bar-->
