--- a/myface-onface-html/src/assets/less/style/page/register.less
+++ b/myface-onface-html/src/assets/less/style/page/register.less
@@ -251,7 +251,7 @@
       margin: 0 auto;
       background-repeat: no-repeat;
       background-position: center center;
-      background-image: url(../images/icons/logo-icon.png);
+      background-image: url(../images/icon/logo-icon.png);
     }
   }
   .forgetpass-form {
