--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -225,6 +225,19 @@
             <div class="fb-conmment">
               <img src="assets/images/upload/fb/fb-2.jpg" alt="myface">
             </div><!--/.facebook-comment-->
+            <!--shop-info-box-->
+            <div class="alert shop-info-box">
+              <label>Thông tin Shop bán hàng</label>
+              <p>
+                <a class="shop-name" href="#">Gucci</a>
+              </p>
+              <p><span class="lb">Địa chỉ:</span> Tầng B1, Vincom Mega Mall Thảo Điền, 159-161 Xa Lộ Hà Nội, Phường Thảo Điền, Quận 2, Thành Phố Hồ Chí Minh.</p>
+              <p class="contact-info-row">
+                <span class="lb">Email:</span> <a href="mailto:Guccihanghieu@gmail.com">Guccihanghieu@gmail.com </a>
+                <span class="lb">Phone:</span> <a href="tel:1900636798">02455254523</a>
+              </p>
+              <p>Thực Phẩm: Sữa bột cho bé, Sữa Optimum Gold, Thực phẩm chay, Thực phẩm bổ dưỡng, Thực phẩm ăn liền, Thực phẩm tươi, Bột ăn dặm ridielac, Bia Heineken​, Bia Budweiser, Bia Tiger, Kẹo alpenliebe, Bia 333 thùng...<a class="more-product" href="#">Xem thêm</a></p>
+            </div>
           </div><!--./products-gallery-->
 
           <!--product-info-->
