--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -354,8 +354,12 @@
             <!--pin-block-->
             <div class="info-block pin-block">
               <ul class="icon-tools">
-              	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></a></li>
-              	<li class="m-pin pull-right"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></a></li>
+              	<li class="m-like">
+                  <a href=""><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></a>
+                </li>
+              	<li class="m-pin pull-right">
+                  <a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></a>
+                </li>
               </ul>
             </div>
 
