--- a/myface-onface-html/src/views/shopper-product-detail.html
+++ b/myface-onface-html/src/views/shopper-product-detail.html
@@ -59,7 +59,7 @@
                 </div>
                 <span class="slider-control slider-next"><i class="fa fa-angle-right"></i></span>
               </div>
-            </div>  <!--./stage-wrap--> 
+            </div>  <!--./stage-wrap-->
 
             <!--product-detail-->
             <div class="product-detail">
@@ -133,7 +133,7 @@
                       </tr>
                     </tbody>
                   </table><!-- /.table -->
-                </div>    
+                </div>
               </div>
             </div><!--product-detail-->
 
@@ -157,7 +157,7 @@
                 <div class="add-number-to-buy like-box">
                   <ul class="icon-tools">
                   	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></a></li>
-                  	<li class="m-pin"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></a></li>     
+                  	<li class="m-pin"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></a></li>
                   	<li class="m-buy"><a href=""><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></a></li>
                     <li class="buy-now"><button class="btn btn-primary btn-number-action" type="button"><span class="icon"></span>Mua liền<span class="icon"><i class="fa fa-arrow-right" aria-hidden="true"></i></span></button></li>
                   </ul>
@@ -181,6 +181,19 @@
             <div class="fb-conmment">
               <img src="assets/images/upload/fb/fb-2.jpg" alt="myface">
             </div><!--/.facebook-comment-->
+            <!--shop-info-box-->
+            <div class="alert shop-info-box">
+              <label>Thông tin Shop bán hàng</label>
+              <p>
+                <a class="shop-name" href="#">Gucci</a>
+              </p>
+              <p><span class="lb">Địa chỉ:</span> Tầng B1, Vincom Mega Mall Thảo Điền, 159-161 Xa Lộ Hà Nội, Phường Thảo Điền, Quận 2, Thành Phố Hồ Chí Minh.</p>
+              <p class="contact-info-row">
+                <span class="lb">Email:</span> <a href="mailto:Guccihanghieu@gmail.com">Guccihanghieu@gmail.com </a>
+                <span class="lb">Phone:</span> <a href="tel:1900636798">02455254523</a>
+              </p>
+              <p>Thực Phẩm: Sữa bột cho bé, Sữa Optimum Gold, Thực phẩm chay, Thực phẩm bổ dưỡng, Thực phẩm ăn liền, Thực phẩm tươi, Bột ăn dặm ridielac, Bia Heineken​, Bia Budweiser, Bia Tiger, Kẹo alpenliebe, Bia 333 thùng...<a class="more-product" href="#">Xem thêm</a></p>
+            </div>
           </div><!--./products-gallery-->
 
           <!--product-info-->
@@ -201,7 +214,7 @@
             <div class="info-block view-block">
               <ul class="icon-tools">
                 <li class="m-like"><span class="icon i-like">789</span><span class="icon-text">thích</span></li>
-                <li class="m-pin"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></li>     
+                <li class="m-pin"><span class="icon i-pin">456</span><span class="icon-text">ghim</span></li>
                 <li class="m-buy pull-right"><span class="icon i-buy">123</span><span class="icon-text">mua</span></li>
               </ul>
             </div>
@@ -209,7 +222,7 @@
             <div class="info-block price-block">
               <span class="price current">235.000<sup>đ</sup></span>
               <span class="price shipping">(Miễn phí vận chuyển)</span>
-              <span class="price original">325.000<sup>đ</sup></span> 
+              <span class="price original">325.000<sup>đ</sup></span>
             </div><!--/.price-block-->
             <!--product-property-->
             <div class="product-property mf-product-property">
@@ -307,15 +320,15 @@
             	<label class="block-title"><a href="#">Sản phẩm tương tự của Shop</a></label>
               <div class="row shop-list-row">
                 <ol class="m-product-list">
-                  {% for x in [1,2,3,4] %}  
+                  {% for x in [1,2,3,4] %}
                   <!--m-product-item-->
                   <li class="col-xs-6 m-product-item">
                     <div class="m-product-inner">
                       <div class="m-product-info">
                         <a class="m-product-link" href="myface-product-detail.html">
                           <figure class="m-product-img">
-                            <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">    
-                          </figure> 
+                            <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">
+                          </figure>
                         </a>
                       </div>
                     </div>
