--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -157,7 +157,7 @@
 }
 .btn-buy-now {
   padding: 0 12px;
-  margin-right: 8px;
+  margin-right: 6px;
   .lr-text {
     font-size: 18px;
     font-weight: 700;
@@ -175,8 +175,14 @@
     height: 15px;
     display: inline-block;
     margin-right: 5px;
-    margin-top: 1px;
+    margin-top: 6px;
     background: url(../images/icons/buy.png) no-repeat center center;
+  }
+  .sc-text {
+    width: 100%;
+    display: block;
+    margin-bottom: 5px;
+    font-size: 13px;
   }
   @media (max-width: @screen-md-max) {
     margin-bottom: 10px;
