--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -78,7 +78,7 @@
             <!--stage-wrap-->
             <div class="stage-wrap">
               <div class="stage">
-                <img src="assets/images/upload/product/product-9.jpg" alt="myface">
+                <img src="https://home.iface.vn/assets/images/upload/products/e37rr8369990466164743z43.jpeg" alt="myface" id="image_main">
               </div>
               <div class="thumnail">
                 <span class="slider-control slider-prev"><i class="fa fa-angle-left"></i></span>
