--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -42,8 +42,15 @@
 	height: 100%;
 	overflow: hidden;
   text-align: center;
+  position: relative;
 	img {
 		max-height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 	}
 }
 .m-product-hover {
