--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -54,7 +54,7 @@
 					height: 50px;
 					border-radius: 4px;
 					overflow: hidden;
-					margin-right: 6px;
+					margin-right: 5px;
 					img {
 						border-radius: 4px;
 					}
@@ -81,6 +81,9 @@
   .product-info {
     @media (min-width: @screen-sm-min) {
       padding-left: 30px;
+    }
+    @media (min-width: @screen-lg-min) {
+      width: 370px;
     }
   }
 	.product-detail {
@@ -241,13 +244,13 @@
 }
 .lightbox-wrap {
 	position: absolute;
-	top: -60px;
+	top: -70px;
 	left: 0;
 	z-index: 9;
 	display: none;
 	.close-btn {
-		width: 25px;
-		height: 25px;
+		width: 23px;
+		height: 23px;
 		background-size: 100% 100%;
 		&:hover {
 			background-size: 100% 100%;
@@ -255,8 +258,8 @@
 	}
 }
 .add-number-to-buy {
-	width: 338px;
-	height: 50px;
+	width: 340px;
+	height: 52px;
 	padding: 6px;
 	padding-left: 20px;
 	background: #fff;
@@ -267,6 +270,19 @@
 			&:first-child {
 				border-bottom-right-radius: 3px;
 	    	border-top-right-radius: 3px;
+        height: 36px;
+        &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+          font-size: 13px;
+        }
+        &::-moz-placeholder { /* Firefox 19+ */
+          font-size: 13px;
+        }
+        &:-ms-input-placeholder { /* IE 10+ */
+          font-size: 13px;
+        }
+        &:-moz-placeholder { /* Firefox 18- */
+          font-size: 13px;
+        }
 			}
 		}
 		.input-group-btn {
@@ -305,7 +321,7 @@
 .lightbox-1 {
 	.close-back {
 		top: -19px;
-    right: -20px;
+    right: -12px;
     @media (max-width: @screen-md-max) {
       top: -30px;
       right: -1px;
@@ -391,6 +407,16 @@
 	.stage {
 		width: 100%;
 		height: auto;
+    position: relative;
+    img {
+      max-height: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+      transform: translate(-50%,-50%);
+    }
 	}
   @media (max-width: @screen-xs-max) {
     padding: 0;
