--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -205,7 +205,7 @@ img {
 .fb_iframe_widget,
 .fb_iframe_widget span,
 .fb_iframe_widget span iframe[style] {
-  width: 100% !important;
+  float: right;
 }
 select.bs-select-hidden,
 select.selectpicker {
