--- a/myface-onface-html/src/assets/less/style/page/product-detail.less
+++ b/myface-onface-html/src/assets/less/style/page/product-detail.less
@@ -92,6 +92,11 @@
 		overflow: hidden;
 		.product-intro {
 			position: relative;
+      color: @text-color-2;
+      .title,
+      table {
+        color: @text-color-1;
+      }
 		}
     .title {
       font-weight: bold;
@@ -473,6 +478,15 @@
 			}
 		}
 	}
+  .tags-property {
+    .item-property-values {
+      .property-select {
+        a {
+          color: @text-color-2;
+        }
+      }
+    }
+  }
 }
 .product-gallery-header {
 	width: 100%;
