--- a/myface-onface-html/src/assets/less/style/block/footer.less
+++ b/myface-onface-html/src/assets/less/style/block/footer.less
@@ -112,6 +112,9 @@ footer{
 				&.bct {
 					margin-right: 20px;
           margin-left: -5px;
+          img {
+            width: 140px;
+          }
 				}
 			}
 		}
