--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -16,8 +16,12 @@
               </a>
             </li>
             <li class="li-item f-bct">
-              <span class="bct"><img class="" src="assets/images/upload/fb/bct.png" alt="myface"></span>
-              <span class="nt"><img class="" src="assets/images/upload/fb/nt.png" alt="myface"></span>
+              <span class="bct">
+                <a target="_blank" href="http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=26445">
+                  <img class="" src="assets/images/upload/fb/bct.png" alt="myface">
+                </a>
+              </span>
+              <span class="nt"><img class="" src="assets/images/upload/fb/ssl.gif" alt="myface"></span>
             </li>
           </ul>
       	</div>
